--- a/_includes/toc-date.html
+++ b/_includes/toc-date.html
@@ -52,8 +52,8 @@
             {% endfor %}
 
             <li>
-                <a href="https://github.com/sighingnow/jekyll-gitbook/fork" target="blank" class="gitbook-link">
-                    Fork it Now!
+                <a href="https://github.com/RochaCarla/Onboarding" target="blank" class="gitbook-link">
+                    Acesse os Arquivos do Livro
                 </a>
             </li>
         </ul>
