--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,6 +24,8 @@
     {%- endfor -%}
 {% endif %}
 
+<p>&copy; {{ "now" | date: "%Y" }} Carla Rocha. Esse livro foi feito com a ajuda de muitos amigos e colaboradores maravilhosos. Para feedback, errata, e sugestões, a autora pode ser acessada <a href="mailto:author@example.com">aqui</a>.</p>
+
 {%- if site.tracker -%}
     <!-- trackers -->
     {%- if site.tracker.google_analytics -%}
