--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -56,12 +56,12 @@
             <script>
             var gitbook = gitbook || [];
             gitbook.push(function() {
-                gitbook.page.hasChanged({%- include metadata-post.json.tpl -%});
+                gitbook.page.hasChanged({% include metadata-post.json.tpl %});
             });
             </script>
         </div>
 
-        {%- include footer.html -%}
+        {% include footer.html %}
 
     </body>
 </html>
